# git-patcher

./: Cargo.toml  flake.nix
src/: main.rs
src/commands/: mod.rs  patch.rs  pop.rs  push.rs  source.rs
src/config/: config.rs
src/patcher/: internal_state.rs  mod.rs  patch_series.rs  patcher.rs  sync_strategy.rs
src/utils/: git_utils.rs  mod.rs  patch_utils.rs  patcher.rs  sig_utils.rs
