[package]
name = "git-patcher"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.102", features = ["backtrace"] }
base64 = "0.22.1"
chrono = "0.4.44"
clap = { version = "4.6.0", features = ["derive"] }
fd-lock = "4.0.4"
git2 = "0.20.4"
ouroboros = "0.18.5"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
